k8s/envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels: { app: envoy }
  template:
    metadata:
      labels: { app: envoy }
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.28.0
          args: ["-c", "/etc/envoy/envoy.yaml", "--log-level", "info"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/envoy
      volumes:
        - name: config
          configMap:
            name: envoy-config
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: default
spec:
  type: LoadBalancer
  selector: { app: envoy }
  ports:
    - name: http
      port: 80
      targetPort: 8080
