k8s/ingest-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingest-service
spec:
  selector:
    app: ingest-service
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
